fixed some issues regarding the fade in animation for scroll on mobile

--- a/docs/assets/css/index.scss
+++ b/docs/assets/css/index.scss
@@ -127,6 +127,11 @@ body {
             width: 100%;
         }
     }
+    @media(max-width: 767px) {
+        &:before {
+            width: 0!important;
+        }
+    }
 }
 
 .button {
